--- a/English.lproj/StripSheet.xib
+++ b/English.lproj/StripSheet.xib
@@ -11,7 +11,7 @@
       <string key="com.brandonwalkin.BWToolkit">1.2.2</string>
     </dictionary>
     <array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
-      <integer value="2"/>
+      <integer value="38"/>
     </array>
     <array key="IBDocument.PluginDependencies">
       <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -131,7 +131,6 @@
                                   </object>
                                   <int key="NSResizingMask">2</int>
                                   <bool key="NSIsResizeable">YES</bool>
-                                  <bool key="NSIsEditable">YES</bool>
                                   <reference key="NSTableView" ref="140976401"/>
                                   <object class="NSSortDescriptor" key="NSSortDescriptorPrototype">
                                     <string key="NSKey">revision</string>
@@ -171,7 +170,6 @@
                                   </object>
                                   <int key="NSResizingMask">2</int>
                                   <bool key="NSIsResizeable">YES</bool>
-                                  <bool key="NSIsEditable">YES</bool>
                                   <reference key="NSTableView" ref="140976401"/>
                                 </object>
                                 <object class="NSTableColumn" id="103051121">
@@ -198,7 +196,6 @@
                                   </object>
                                   <int key="NSResizingMask">2</int>
                                   <bool key="NSIsResizeable">YES</bool>
-                                  <bool key="NSIsEditable">YES</bool>
                                   <reference key="NSTableView" ref="140976401"/>
                                 </object>
                                 <object class="NSTableColumn" id="961363893">
@@ -225,7 +222,6 @@
                                   </object>
                                   <int key="NSResizingMask">2</int>
                                   <bool key="NSIsResizeable">YES</bool>
-                                  <bool key="NSIsEditable">YES</bool>
                                   <reference key="NSTableView" ref="140976401"/>
                                 </object>
                                 <object class="NSTableColumn" id="52768326">
@@ -252,7 +248,6 @@
                                   </object>
                                   <int key="NSResizingMask">3</int>
                                   <bool key="NSIsResizeable">YES</bool>
-                                  <bool key="NSIsEditable">YES</bool>
                                   <reference key="NSTableView" ref="140976401"/>
                                 </object>
                                 <object class="NSTableColumn" id="233831003">
@@ -279,7 +274,6 @@
                                   </object>
                                   <int key="NSResizingMask">2</int>
                                   <bool key="NSIsResizeable">YES</bool>
-                                  <bool key="NSIsEditable">YES</bool>
                                   <reference key="NSTableView" ref="140976401"/>
                                 </object>
                                 <object class="NSTableColumn" id="637087480">
@@ -310,7 +304,6 @@
                                   </object>
                                   <int key="NSResizingMask">2</int>
                                   <bool key="NSIsResizeable">YES</bool>
-                                  <bool key="NSIsEditable">YES</bool>
                                   <reference key="NSTableView" ref="140976401"/>
                                 </object>
                               </array>
@@ -410,7 +403,7 @@
                             <object class="NSTextView" id="948105375">
                               <reference key="NSNextResponder" ref="679456669"/>
                               <int key="NSvFlags">2322</int>
-                              <string key="NSFrameSize">{10, 15}</string>
+                              <string key="NSFrame">{{0, 1}, {10, 14}}</string>
                               <reference key="NSSuperview" ref="679456669"/>
                               <object class="NSTextContainer" key="NSTextContainer" id="108797151">
                                 <object class="NSLayoutManager" key="NSLayoutManager">
